--- a/app/navbar.module.css
+++ b/app/navbar.module.css
@@ -1,1 +1,34 @@
+.container{
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+   
+    
+}
 
+.logo {
+    font-weight: bold;
+    padding-left: 0.5rem;
+     background: linear-gradient(to bottom, #8fe1ff, #f62abc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.link {
+    font-size: 17px;
+    color: rgb(215, 214, 214);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    box-shadow: inset 0 0 0 0 #54b3d6;
+}
+
+.link:hover {
+   box-shadow: inset 100px 0 0 0 #33ff00;
+  color: white;
+}
